Metodo de pesquisa todos resolvido. Antes retornava null agora retorna corretamente.